--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,22 @@
-<h1>Make your form here</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>title</title>
+  </head>
+  <body>
+    <h1>Inscribe a new Pirate and his ship!</h1>
+    <form class="" action="/display" method="post">
+    <lable> Pirate`s name: <input type="text" name="name" value=""></lable>
+    <lable> Pirate`s weight: <input type="text" name="weight" value=""></lable>
+    <lable> Pirate`s height: <input type="text" name="height" value=""></lable>
+    <lable> Pirate`s ship name: <input type="text" name="ship_name" value=""></lable>
+    <lable> Pirate`s ship type: <input type="text" name="ship_type" value=""></lable>
+    <lable> Pirate`s ship name: <input type="text" name="ship_booty" value=""></lable>
+    <h2> Age: <input type="text" name="age" value=""></h2>
+      <p><input type="submit" id = "submit" value="Submit"></p>
+    </form>
+
+
+  </body>
+</html>
