automatically backed up by learn

--- a/views/pirates/index.erb
+++ b/views/pirates/index.erb
@@ -10,9 +10,9 @@
     <ul>
 
     <% @pirates.each do |pirate| %>
-      <li><%= pirate.name %></li>
-      <li><%= pirate.weight %></li>
-      <li><%= pirate.height %></li>
+      <li>Name:<%= pirate.name %></li>
+      <li>Weight:<%= pirate.weight %></li>
+      <li>Height:<%= pirate.height %></li>
       <%end%>
 
     </ul>
