--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Inscribe a new Pirate and his ship!</h1>
-    <form class="" action="/pirates" method="post">
+    <form action="/pirates" method="post">
     <lable> Pirate`s name: <input type="text" name="name" value=""></lable>
     <lable> Pirate`s weight: <input type="text" name="weight" value=""></lable>
     <lable> Pirate`s height: <input type="text" name="height" value=""></lable>
