--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -7,7 +7,8 @@
   <body>
     <h1>Inscribe a new Pirate and his ship!</h1>
     <form action="/pirates" method="post">
-    <lable> Pirate`s name: <input type="text" name="name" value=""></lable>
+    <lable for="pirate_name"> Pirate`s name: </lable>
+    <input type="text" id="pirate_name" name= "pirate[name]">
     <lable> Pirate`s weight: <input type="text" name="weight" value=""></lable>
     <lable> Pirate`s height: <input type="text" name="height" value=""></lable>
     <lable> Pirate`s ship name: <input type="text" name="ship_name" value=""></lable>
