--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -8,13 +8,22 @@
     <h1>Inscribe a new Pirate and his ship!</h1>
     <form action="/pirates" method="post">
     <lable for="pirate_name"> Pirate`s name: </lable>
-    <input type="text" id="pirate_name" name= "pirate[name]">
+
+    <form action="/pirates" method="post">
+    <lable for="pirate_weight"> Pirate`s weight: </lable>
+
+    <form action="/pirates" method="post">
+    <lable for="pirate_height"> Pirate`s height: </lable>
+
+
+    
+    <!-- <input type="text" id="pirate_name" name= "pirate[name]">
     <lable> Pirate`s weight: <input type="text" name="weight" value=""></lable>
     <lable> Pirate`s height: <input type="text" name="height" value=""></lable>
     <lable> Pirate`s ship name: <input type="text" name="ship_name" value=""></lable>
     <lable> Pirate`s ship type: <input type="text" name="ship_type" value=""></lable>
     <lable> Pirate`s ship name: <input type="text" name="ship_booty" value=""></lable>
-    <h2> Age: <input type="text" name="age" value=""></h2>
+    <h2> Age: <input type="text" name="age" value=""></h2> -->
       <p><input type="submit" id = "submit" value="Submit"></p>
     </form>
 
