automatically backed up by learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -8,12 +8,15 @@
     <h1>Inscribe a new Pirate and his ship!</h1>
     <form action="/pirates" method="post">
     <lable for="pirate_name"> Pirate`s name: </lable>
+    <input type="text" id="pirate_name" name= "pirate[name]">
 
-    <form action="/pirates" method="post">
+
     <lable for="pirate_weight"> Pirate`s weight: </lable>
+    <input type="text" id="pirate_name" name= "pirate[name]">
 
-    <form action="/pirates" method="post">
+
     <lable for="pirate_height"> Pirate`s height: </lable>
+    <input type="text" id="pirate_name" name= "pirate[name]">
 
 
 
