automatically backed up by learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -11,10 +11,10 @@
     <input type="text" id="pirate_name" name= "pirate[name]">
 
     <lable for="pirate_weight"> Pirate`s weight: </lable>
-    <input type="text" id="pirate_name" name= "pirate[name]">
+    <input type="text" id="pirate_name" name= "pirate[weight]">
 
     <lable for="pirate_height"> Pirate`s height: </lable>
-    <input type="text" id="pirate_name" name= "pirate[name]">
+    <input type="text" id="pirate_name" name= "pirate[height]">
 
 
 
