--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -25,7 +25,7 @@
     <lable> Pirate`s ship type: <input type="text" name="ship_type" value=""></lable>
     <lable> Pirate`s ship name: <input type="text" name="ship_booty" value=""></lable>
     <h2> Age: <input type="text" name="age" value=""></h2> -->
-      <p><input type="submit" id = "submit" value="Submit"></p>
+      <p><input type="submit"></p>
     </form>
 
 
