--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -7,14 +7,11 @@
   <body>
     <h1>Inscribe a new Pirate and his ship!</h1>
     <form action="/pirates" method="post">
-    <lable for="pirate_name"> Pirate`s name: </lable>
-    <input type="text" id="pirate_name" name= "pirate[name]">
+    <lable for="pirate_name"> Pirate`s name: <input type="text" id="pirate_name" name= "pirate[name]"></lable>
 
-    <lable for="pirate_weight"> Pirate`s weight: </lable>
-    <input type="text" id="pirate_name" name= "pirate[weight]">
+    <lable for="pirate_weight"> Pirate`s weight: <input type="text" id="pirate_name" name= "pirate[weight]"></lable>
 
-    <lable for="pirate_height"> Pirate`s height: </lable>
-    <input type="text" id="pirate_name" name= "pirate[height]">
+    <lable for="pirate_height"> Pirate`s height: <input type="text" id="pirate_name" name= "pirate[height]"> </lable>
 
 
 
