automatically backed up by learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -9,9 +9,9 @@
     <form action="/pirates" method="post">
     <lable for="pirate_name"> Pirate`s name: <input type="text" id="pirate_name" name= "pirate[name]"></lable>
 
-    <lable for="pirate_weight"> Pirate`s weight: <input type="text" id="pirate_name" name= "pirate[weight]"></lable>
+    <lable for="pirate_weight"> Pirate`s weight: <input type="text" id="pirate_weight" name= "pirate[weight]"></lable>
 
-    <lable for="pirate_height"> Pirate`s height: <input type="text" id="pirate_name" name= "pirate[height]"> </lable>
+    <lable for="pirate_height"> Pirate`s height: <input type="text" id="pirate_hight" name= "pirate[height]"> </lable>
 
 
 
