automatically backed up by learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -13,6 +13,18 @@
 
     <lable for="pirate_height"> Pirate`s height: <input type="text" id="pirate_hight" name= "pirate[height]"> </lable>
 
+    <label for="ship_name_1">Ship name:<input type="text" name="pirate[ships][][name]" id="ship_name_1"></label>
+
+    <label for="ship_type">Ship type:<input type="text" name="pirate[ships][][type]" id="ship_type_1"></label>
+
+    <label>Ship booty:<input type="text" name="pirate[ships][][booty]" id="ship_booty_1"></label>
+
+    <label>Ship name:<input type="text" name="pirate[ships][][name]" id="ship_name_2"></label>
+
+    <label>Ship type:<input type="text" name="pirate[ships][][type]" id="ship_type_2"></label>
+
+    <label>Ship booty:<input type="text" name="pirate[ships][][booty]" id="ship_booty_2"></label>
+
 
 
     <!-- <input type="text" id="pirate_name" name= "pirate[name]">
