--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -15,15 +15,15 @@
 
     <label for="ship_name_1">Ship name:<input type="text" name="pirate[ships][][name]" id="ship_name_1"></label>
 
-    <label for="ship_type">Ship type:<input type="text" name="pirate[ships][][type]" id="ship_type_1"></label>
+    <label for="ship_type_1">Ship type:<input type="text" name="pirate[ships][][type]" id="ship_type_1"></label>
 
-    <label>Ship booty:<input type="text" name="pirate[ships][][booty]" id="ship_booty_1"></label>
+    <label for="ship_booty_1">Ship booty:<input type="text" name="pirate[ships][][booty]" id="ship_booty_1"></label>
 
-    <label>Ship name:<input type="text" name="pirate[ships][][name]" id="ship_name_2"></label>
+    <label for="ship_name_2">Ship name:<input type="text" name="pirate[ships][][name]" id="ship_name_2"></label>
 
-    <label>Ship type:<input type="text" name="pirate[ships][][type]" id="ship_type_2"></label>
+    <label for="ship_tpe_2">Ship type:<input type="text" name="pirate[ships][][type]" id="ship_type_2"></label>
 
-    <label>Ship booty:<input type="text" name="pirate[ships][][booty]" id="ship_booty_2"></label>
+    <label for=ship_booty_2>Ship booty:<input type="text" name="pirate[ships][][booty]" id="ship_booty_2"></label>
 
 
 
