automatically backed up by learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -34,7 +34,7 @@
     <lable> Pirate`s ship type: <input type="text" name="ship_type" value=""></lable>
     <lable> Pirate`s ship name: <input type="text" name="ship_booty" value=""></lable>
     <h2> Age: <input type="text" name="age" value=""></h2> -->
-      <p><input type="submit"></p>
+      <p><input type="submit">'Submit'</p>
     </form>
 
 
