--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -2,9 +2,9 @@
 
 <h1>Pirates</h1>
  <div class="pirate">
-  <h3>Name: <%= pirate.name %></h3><br>
-  <h4>Weight: <%= pirate.weight %> pounds</h4><br>
-  <h4>Height: <%= pirate.height %> inches</h4>
+  <h3>Name: <%= @pirate.name %></h3><br>
+  <h4>Weight: <%= @pirate.weight %> pounds</h4><br>
+  <h4>Height: <%= @pirate.height %> inches</h4>
 </div><br>
 <!-- <h2>Display your first ship here</h2>
 
@@ -14,8 +14,8 @@
 <h1>Ships</h1>
 <% @ships.each do |ship| %>
   <div class="ship">
-    <p>Name: <%= ship.name %></p><br>
-    <p>Type: <%= ship.type %></p><br>
-    <p>Booty: <%= ship.booty %></p>
+    <p>Name: <%= @ship.name %></p><br>
+    <p>Type: <%= @ship.type %></p><br>
+    <p>Booty: <%= @ship.booty %></p>
   </div><br>
 <% end %>
