automatically backed up by learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -7,11 +7,11 @@
   <body>
     <h1>Inscribe a new Pirate and his ship!</h1>
     <form action="/pirates" method="post">
-    <lable for="pirate_name"> Pirate`s name: <input type="text" id="pirate_name" name= "pirate[name]"></lable>
+    <br><lable for="pirate_name"> Pirate`s name: <input type="text" id="pirate_name" name= "pirate[name]"></lable>
 
     <lable for="pirate_weight"> Pirate`s weight: <input type="text" id="pirate_weight" name= "pirate[weight]"></lable>
 
-    <lable for="pirate_height"> Pirate`s height: <input type="text" id="pirate_hight" name= "pirate[height]"> </lable>
+    <lable for="pirate_height"> Pirate`s height: <input type="text" id="pirate_hight" name= "pirate[height]"> </lable></br>
 
     <label for="ship_name_1">Ship name:<input type="text" name="pirate[ships][][name]" id="ship_name_1"></label>
 
