--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -13,19 +13,19 @@
 
     <lable for="pirate_height"> Pirate`s height: <input type="text" id="pirate_hight" name= "pirate[height]"> </lable></br>
 
-    <label for="ship_name_1">Ship name:<input type="text" name="pirate[ships][][name]" id="ship_name_1"></label>
+    <br><label for="ship_name_1">Ship name:<input type="text" name="pirate[ships][][name]" id="ship_name_1"></label>
 
     <label for="ship_type_1">Ship type:<input type="text" name="pirate[ships][][type]" id="ship_type_1"></label>
 
-    <label for="ship_booty_1">Ship booty:<input type="text" name="pirate[ships][][booty]" id="ship_booty_1"></label>
+    <label for="ship_booty_1">Ship booty:<input type="text" name="pirate[ships][][booty]" id="ship_booty_1"></label></br>
 
-    <label for="ship_name_2">Ship name:<input type="text" name="pirate[ships][][name]" id="ship_name_2"></label>
+    <br><label for="ship_name_2">Ship name:<input type="text" name="pirate[ships][][name]" id="ship_name_2"></label>
 
     <label for="ship_tpe_2">Ship type:<input type="text" name="pirate[ships][][type]" id="ship_type_2"></label>
 
-    <label for=ship_booty_2>Ship booty:<input type="text" name="pirate[ships][][booty]" id="ship_booty_2"></label>
+    <label for=ship_booty_2>Ship booty:<input type="text" name="pirate[ships][][booty]" id="ship_booty_2"></label></br>
 
-      <input type="submit" value="Submit">
+      <br><input type="submit" value="Submit"></br>
     </form>
 
 
