--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,21 +1,11 @@
-<!-- <h1>Display your Pirate here</h1> -->
-
-<h1>Pirates</h1>
- <div class="pirate">
-  <h3>Name: <%= @pirate.name %></h3><br>
-  <h4>Weight: <%= @pirate.weight %> pounds</h4><br>
-  <h4>Height: <%= @pirate.height %> inches</h4>
-</div><br>
-<!-- <h2>Display your first ship here</h2>
-
-
-
-<h2>Display your second ship here</h2> -->
-<h1>Ships</h1>
-<% @ships.each do |ship| %>
-  <div class="ship">
-    <p>Name: <%= @ship.name %></p><br>
-    <p>Type: <%= @ship.type %></p><br>
-    <p>Booty: <%= @ship.booty %></p>
-  </div><br>
-<% end %>
+<h1>Pirate name: <%=@pirates.name%></h1>
+<h2>Pirate weight: <%=@pirates.weight%> lbs.</h2>
+<h2>Pirate height: <%=@pirates.height%> feet</h2>
+ <!-- <h2>Display your first ship here</h2> -->
+<h2>Ship 1 name: <%=@ships[0].name%></h2>
+<h2>Ship 1 type: <%=@ships[0].type%></h2>
+<h2>Ship 1 booty: <%=@ships[0].booty%></h2>
+ <!-- <h2>Display your second ship here</h2> -->
+<h2>Ship 2 name: <%=@ships[1].name%></h2>
+<h2>Ship 2 type: <%=@ships[1].type%></h2>
+<h2>Ship 2 booty: <%=@ships[1].booty%></h2>
