--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,3 +1,4 @@
+<!-- <h1>Display your Pirate here</h1> -->
 <h1>Pirate name: <%=@pirates.name%></h1>
 <h2>Pirate weight: <%=@pirates.weight%> lbs.</h2>
 <h2>Pirate height: <%=@pirates.height%> feet</h2>
