automatically backed up by learn

--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -17,3 +17,5 @@
     <h2>Ship 2 name: <%=@ships[1].name%></h2>
     <h2>Ship 2 type: <%=@ships[1].type%></h2>
     <h2>Ship 2 booty: <%=@ships[1].booty%></h2>
+  </body>
+</html>    
