--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,21 @@
-<h1>Display your Pirate here</h1>
-
-
-<h2>Display your first ship here</h2>
-
-
-<h2>Display your second ship here</h2>
+<!-- <h1>Display your Pirate here</h1> -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>title</title>
+  </head>
+  <body>
+    <h1>Pirate name: <%=@pirates.name%></h1>
+    <h2>Pirate weight: <%=@pirates.weight%> lbs.</h2>
+    <h2>Pirate height: <%=@pirates.height%> feet</h2>
+ <!-- <h2>Display your first ship here</h2> -->
+    <h2>Ship 1 name: <%=@ships[0].name%></h2>
+    <h2>Ship 1 type: <%=@ships[0].type%></h2>
+    <h2>Ship 1 booty: <%=@ships[0].booty%></h2>
+ <!-- <h2>Display your second ship here</h2> -->
+    <h2>Ship 2 name: <%=@ships[1].name%></h2>
+    <h2>Ship 2 type: <%=@ships[1].type%></h2>
+    <h2>Ship 2 booty: <%=@ships[1].booty%></h2>
+  </body>
+</html>    
